tests/ui/ser-union.stderr
error: currently only structs and enums are supported by this derive
 --> tests/ui/ser-union.rs:3:10
  |
3 | #[derive(Serialize)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
